cambios en el index

--- a/scss/stile.scss
+++ b/scss/stile.scss
@@ -6,7 +6,8 @@
 
 
 
-/*se ultiliza overflow-x para completar la pantalla a su totalidad*/
+/*se ultiliza overflow-x para completar la pantalla la totalidad*/
+
 .body {
     overflow-x: hidden;
     background-image:$color-body;
