--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   box-sizing: border-box; }
 
 /*inicio*/
-/*se ultiliza overflow-x para completar la pantalla a su totalidad*/
+/*se ultiliza overflow-x para completar la pantalla la totalidad*/
 .body {
   overflow-x: hidden;
   background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%); }
