subiendo pre entrega tres

--- a/scss/stile.scss
+++ b/scss/stile.scss
@@ -6,7 +6,7 @@
 
 
 
-/*se ultiliza overflow-x para completar la pantalla la totalidad*/
+/*se ultiliza overflow-x para completar la pantalla la totalidaddddd*/
 
 .body {
     overflow-x: hidden;
