--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -50,7 +50,7 @@
     
 
     .main-inicio {
-        width: 100%;
+        width: $ancho;
         height: auto;
         margin: 1rem;
         display: grid;
