--- a/scss/secciones/_nosotros.scss
+++ b/scss/secciones/_nosotros.scss
@@ -5,13 +5,7 @@
 
 .main-nos {
    
-    display: flex;
-
-    flex-direction: column;
-
-    align-items: center;
-
-    text-align: center;
+    @include flex;
 }
 
 
@@ -28,13 +22,7 @@
 
     .main-nos {
    
-        display: flex;
-    
-        flex-direction: column;
-    
-        align-items: center;
-    
-        text-align: center;
+        @include flex;
     }
     
     
