--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -4,9 +4,10 @@
 @import "../utilidades/mixin";
 
 .main-contacto { 
+       
     width: auto;
     height: auto;
-    border: solid black 1px;
+   
    
    
     background-image: linear-gradient(347deg, rgba(245, 245, 245, 1) 0%, rgba(255, 186, 65, 1) 50%, rgba(218, 131, 0, 0.9837184873949579) 100%);
@@ -56,6 +57,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 50px;
     flex-direction: column;
     background-image: linear-gradient(347deg, rgba(245, 245, 245, 1) 0%, rgba(255, 186, 65, 1) 50%, rgba(218, 131, 0, 0.9837184873949579) 100%);
 }
@@ -107,6 +109,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 100px;
     background-image: linear-gradient(347deg, rgba(245, 245, 245, 1) 0%, rgba(255, 186, 65, 1) 50%, rgba(218, 131, 0, 0.9837184873949579) 100%);
 }
 
@@ -122,7 +125,7 @@
 
 .formulario{
     
-    
+      
     color: antiquewhite;
     font-weight: bold;
     -webkit-text-stroke: darkslategray 1px ;
