--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -24,13 +24,7 @@
 @media screen and (min-width: 768px){
     .main-inicio {
     
-        display: flex;
-    
-        flex-direction: column;
-    
-        align-items: center;
-    
-        text-align: center;
+        @include flex;
     }
     
     
