--- a/scss/stile.scss
+++ b/scss/stile.scss
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 @import "utilidades/variables";
+@import "./utilidades/extend";
 /*inicio*/
 
 
@@ -38,11 +39,7 @@
 
 .footer {
 
-    background-color: darkgoldenrod;
-
-    padding: 5px;
-
-    margin-top: 1rem;
+   @extend %footer;
 
 }
 
