--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,11 @@
     font-weight: lighter !important; } }
 
 /*estilos index version mobile aplicando flex*/
+.footer {
+  background-color: darkgoldenrod;
+  padding: 5px;
+  margin-top: 1rem; }
+
 .main-inicio {
   display: flex;
   flex-direction: column;
@@ -115,6 +120,11 @@
     margin-right: 50px; } }
 
 /*estilos nosotros movile */
+.footer {
+  background-color: darkgoldenrod;
+  padding: 5px;
+  margin-top: 1rem; }
+
 .main-nos {
   display: flex;
   flex-direction: column;
@@ -159,6 +169,11 @@
     margin-left: 20px; } }
 
 /*estilos cursos version movile*/
+.footer {
+  background-color: darkgoldenrod;
+  padding: 5px;
+  margin-top: 1rem; }
+
 .img-titulo3 {
   width: 100%;
   height: 300px; }
@@ -255,6 +270,11 @@ section img {
     font-size: 20px; } }
 
 /*estilos ventas version movile*/
+.footer {
+  background-color: darkgoldenrod;
+  padding: 5px;
+  margin-top: 1rem; }
+
 .img-titulo2 {
   width: 100%;
   height: 300px; }
@@ -343,6 +363,11 @@ section img {
     display: flex;
     justify-content: center;
     align-items: center; } }
+
+.footer {
+  background-color: darkgoldenrod;
+  padding: 5px;
+  margin-top: 1rem; }
 
 .main-contacto {
   width: auto;
