--- a/css/main.css
+++ b/css/main.css
@@ -279,63 +279,57 @@ section img {
   width: 100%;
   height: 300px; }
 
-.titulo-cursos {
+.titulo-ventas {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center; }
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+  margin: 5px; }
+
+.main-ventas {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 1px; }
 
 .ventas {
-  width: 100%;
-  height: 100%; }
+  width: 500px;
+  height: auto;
+  gap: 1rem; }
 
-.conteiner-img {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-
-.caja {
-  margin: 15px; }
-  .caja img {
-    width: 400px;
-    height: 420px;
-    border-radius: 30px; }
-  .caja p {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold; }
-
-.caja {
-  margin: 15px; }
+.photo-size {
+  width: 400px !important;
+  height: 400px;
+  border: solid black 2px;
+  margin-bottom: 1rem; }
 
 /* ventas version tablet*/
 @media screen and (min-width: 768px) {
   .img-titulo2 {
     width: 100%;
     height: 750px; }
-  .ventas {
+  .main-ventas {
     width: 100%;
-    height: 100%; }
-  .conteiner-img {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center; }
-  /*.caja img{
-    
-        width: 400px;
-        height: 420px;
-        border-radius: 30px;
-    } */
-  .caja {
-    margin: 15px; }
-    .caja img {
-      width: 400px;
-      height: 420px;
-      border-radius: 30px; }
-    .caja p {
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold; } }
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 1px; }
+  .ventas {
+    width: 500px;
+    height: auto;
+    gap: 1rem; }
+  .photo-size {
+    width: 400px !important;
+    height: 400px;
+    border: solid black 2px;
+    margin-bottom: 1rem; } }
 
 /* ventas version desktop*/
 @media screen and (min-width: 1024px) {
@@ -344,25 +338,20 @@ section img {
     height: 750px; }
   .ventas {
     width: 100%;
-    height: 100%; }
-  .conteiner-img {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; }
-  .caja {
-    margin: 15px; }
-    .caja img {
-      width: 400px;
-      height: 420px;
-      border-radius: 30px; }
-    .caja p {
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold; }
-  .titulo-ventas {
-    display: flex;
+    height: 100%;
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 500px);
+    grid-template-rows: repeat(2, 500px);
+    gap: 1rem;
     justify-content: center;
-    align-items: center; } }
+    justify-items: center; }
+  /*utilice !important debido a q una de las imagenes no se me acoplaba al contenedor*/
+  .photo-size {
+    border: solid black 5px;
+    width: 399px !important;
+    height: 399px;
+    margin: 100px; } }
 
 .footer {
   background-color: darkgoldenrod;
@@ -376,15 +365,13 @@ section img {
 
 .titulo-contac {
   color: black;
-  font-weight: bold;
-  -webkit-text-stroke: white 1px; }
+  font-weight: bold; }
 
 .formulario {
   height: auto;
   width: auto;
   color: antiquewhite;
-  font-weight: bold;
-  -webkit-text-stroke: darkslategray 1px; }
+  font-weight: bold; }
 
 .contenedor-form {
   display: flex; }
@@ -408,12 +395,10 @@ section img {
     background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%); }
   .titulo-contac {
     color: black;
-    font-weight: bold;
-    -webkit-text-stroke: white 1px; }
+    font-weight: bold; }
   .formulario {
     color: antiquewhite;
-    font-weight: bold;
-    -webkit-text-stroke: darkslategray 1px; }
+    font-weight: bold; }
   .contenedor-form {
     display: flex; }
   .botones {
@@ -434,12 +419,10 @@ section img {
     background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%); }
   .titulo-contac {
     color: black;
-    font-weight: bold;
-    -webkit-text-stroke: white 1px; }
+    font-weight: bold; }
   .formulario {
     color: antiquewhite;
-    font-weight: bold;
-    -webkit-text-stroke: darkslategray 1px; }
+    font-weight: bold; }
   .contenedor-form {
     display: flex; }
   .botones {
