--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,19 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box; }
 
 .footer {
   background-color: darkgoldenrod;
-  padding: 5px;
-  margin-top: 1rem; }
+  padding: 5px; }
 
 /*inicio*/
 /*se ultiliza overflow-x para completar la pantalla la totalidaddddd*/
 .body {
   overflow-x: hidden;
-  background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%); }
+  background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%);
+  width: 100%;
+  height: 915px; }
 
 .img-titulo2 {
   width: 100%;
@@ -27,19 +30,21 @@
 
 /*pie de pagina*/
 .titulo-footer {
+  display: flex;
+  justify-content: center;
   text-align: center;
+  font-size: bold;
   color: darkslategray; }
 
-.facebook {
-  height: 3rem;
-  width: 3rem;
-  float: left;
-  margin-left: 10px; }
+.redes-sociales {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px; }
 
-.instagram {
-  height: 3rem;
-  width: 3rem;
-  margin-left: 1rem; }
+.facebook {
+  width: 70PX;
+  height: 70PX; }
 
 @media screen and (min-width: 768px) {
   .img-titulo2 {
@@ -73,8 +78,7 @@
 /*estilos index version mobile aplicando flex*/
 .footer {
   background-color: darkgoldenrod;
-  padding: 5px;
-  margin-top: 1rem; }
+  padding: 5px; }
 
 .main-inicio {
   display: flex;
@@ -122,8 +126,7 @@
 /*estilos nosotros movile */
 .footer {
   background-color: darkgoldenrod;
-  padding: 5px;
-  margin-top: 1rem; }
+  padding: 5px; }
 
 .main-nos {
   display: flex;
@@ -171,8 +174,7 @@
 /*estilos cursos version movile*/
 .footer {
   background-color: darkgoldenrod;
-  padding: 5px;
-  margin-top: 1rem; }
+  padding: 5px; }
 
 .img-titulo3 {
   width: 100%;
@@ -182,10 +184,10 @@
   display: flex; }
 
 section img {
-  width: 175px;
-  border: solid black 2px; }
+  display: none; }
 
 .programa-cursos {
+  text-align: center;
   width: 90%;
   height: 90%; }
 
@@ -197,9 +199,10 @@ section img {
 
 .titulo-curso {
   display: flex;
-  justify-content: center;
+  text-align: center;
   margin: 50px;
-  font-size: 20px; }
+  font-size: 30px;
+  font-size: bold; }
 
 @media screen and (min-width: 768px) {
   .img-titulo3 {
@@ -208,9 +211,13 @@ section img {
   .section-cursos {
     display: flex; }
   section img {
-    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
     border: solid black 2px; }
   .programa-cursos {
+    text-align: center;
     width: 90%;
     height: 90%; }
   .li-cursos {
@@ -272,8 +279,7 @@ section img {
 /*estilos ventas version movile*/
 .footer {
   background-color: darkgoldenrod;
-  padding: 5px;
-  margin-top: 1rem; }
+  padding: 5px; }
 
 .img-titulo2 {
   width: 100%;
@@ -355,77 +361,117 @@ section img {
 
 .footer {
   background-color: darkgoldenrod;
-  padding: 5px;
-  margin-top: 1rem; }
+  padding: 5px; }
+
+.body-contacto {
+  overflow-x: hidden;
+  background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%);
+  width: 100%; }
+
+.img-titulo4 {
+  width: 100%;
+  height: 200px; }
 
 .main-contacto {
-  width: auto;
-  height: auto;
-  background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%); }
+  display: flex;
+  width: 100%;
+  height: 100%; }
 
 .titulo-contac {
+  display: flex;
+  text-align: center;
   color: black;
   font-weight: bold; }
 
+.contenedor-form {
+  justify-content: center;
+  width: 100%;
+  height: auto; }
+
 .formulario {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 16px;
   height: auto;
-  width: auto;
-  color: antiquewhite;
+  width: 100%;
   font-weight: bold; }
 
-.contenedor-form {
-  display: flex; }
+.text-area {
+  width: 100%;
+  height: 100%; }
 
-.botones {
+.mapa {
+  display: none; }
+
+.boton {
   margin: 10px;
   border-radius: 5px;
   opacity: 1; }
 
 /*version contacto tablet*/
 @media screen and (min-width: 768px) {
+  .img-titulo4 {
+    width: 100%;
+    height: 50%; }
   .main-contacto {
     width: auto;
     height: auto;
-    border: solid black 1px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 50px;
-    flex-direction: column;
-    background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%); }
+    display: flex; }
   .titulo-contac {
+    display: flex;
     color: black;
     font-weight: bold; }
   .formulario {
-    color: antiquewhite;
+    display: flex;
     font-weight: bold; }
   .contenedor-form {
-    display: flex; }
-  .botones {
-    margin: 10px;
-    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    width: auto;
+    height: auto;
+    margin: 100px; }
+  .espacio {
+    width: auto;
+    height: auto; }
+  .mapa {
+    display: none; }
+  .boton {
+    border-radius: 3px;
     opacity: 1; } }
 
 @media screen and (min-width: 1024px) {
+  .img-titulo4 {
+    width: 100%;
+    height: 50%; }
   .main-contacto {
     width: auto;
     height: auto;
-    border: solid black 1px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 100px;
-    background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%); }
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
+    align-items: center; }
   .titulo-contac {
+    display: grid;
     color: black;
     font-weight: bold; }
   .formulario {
-    color: antiquewhite;
+    display: grid;
+    width: auto;
+    height: auto;
     font-weight: bold; }
+  .espacio {
+    width: 100px;
+    margin: 10px; }
   .contenedor-form {
-    display: flex; }
-  .botones {
+    margin: 10px; }
+  .mapa {
+    display: grid; }
+  .boton {
     margin: 10px;
     border-radius: 5px;
     opacity: 1; } }
