--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -1,152 +1,190 @@
-
 @import "../utilidades/variables";
-
 @import "../utilidades/mixin";
 @import "../utilidades/extend";
 
-.main-contacto { 
-       
-    width: auto;
-    height: auto;
-   
-   
-   
-    background-image: linear-gradient(347deg, rgba(245, 245, 245, 1) 0%, rgba(255, 186, 65, 1) 50%, rgba(218, 131, 0, 0.9837184873949579) 100%);
-}
 
-.titulo-contac {
-
- 
-    color: black;
-    font-weight: bold;
-    
-    
+.body-contacto {
+    overflow-x: hidden;
+    background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%);
+    width: 100%;
 
 }
 
-.formulario{
-    height: auto;
-     width: auto;
-    color: antiquewhite;
-    font-weight: bold;
-  
-    
-   
+.img-titulo4 {
+    width: 100%;
+    height: 200px;
 
 }
 
 
-.contenedor-form{
-     display: flex;
-    
-     
-}
 
-.botones{
- 
-    margin: 10px;
-    border-radius: 5px;
-    
-    opacity: 1;
-}
- /*version contacto tablet*/
- @media screen and (min-width: 768px){
-    .main-contacto { 
-    width: auto;
-    height: auto;
-    border: solid black 1px;
+.main-contacto {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 50px;
-    flex-direction: column;
-    background-image: linear-gradient(347deg, rgba(245, 245, 245, 1) 0%, rgba(255, 186, 65, 1) 50%, rgba(218, 131, 0, 0.9837184873949579) 100%);
+    width: 100%;
+    height: 100%;
 }
 
 .titulo-contac {
-
- 
-    color: black;
-    font-weight: bold;
-   
-    
-
-}
-
-.formulario{
-    
-    
-    color: antiquewhite;
-    font-weight: bold;
-    
-    
-   
-
-}
-
-
-.contenedor-form{
-     display: flex;
-    
-     
-}
-
-.botones{
- 
-    margin: 10px;
-    border-radius: 5px;
-    
-    opacity: 1;
-}
- }
-
- @media screen and (min-width: 1024px){
-
-     .main-contacto { 
-    width: auto;
-    height: auto;
-    border: solid black 1px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 100px;
-    background-image: linear-gradient(347deg, rgba(245, 245, 245, 1) 0%, rgba(255, 186, 65, 1) 50%, rgba(218, 131, 0, 0.9837184873949579) 100%);
-}
-
-.titulo-contac {
-
- 
+    text-align: center;
     color: black;
     font-weight: bold;
-   
-    
-
 }
 
-.formulario{
-    
-      
-    color: antiquewhite;
+.contenedor-form {
+
+    justify-content: center;
+    width: 100%;
+    height: auto;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 16px;
+    height: auto;
+    width: 100%;
     font-weight: bold;
-    
-    
-   
 
 }
 
-
-.contenedor-form{
-     display: flex;
-    
-     
+.text-area {
+    width: 100%;
+    height: 100%;
 }
 
-.botones{
- 
+.mapa {
+    display: none
+}
+
+.boton {
+
     margin: 10px;
     border-radius: 5px;
-    
     opacity: 1;
 }
- }
+
+/*version contacto tablet*/
+@media screen and (min-width:768px) {
+
+    .img-titulo4 {
+        width: 100%;
+        height: 50%;
+    
+    }
+    .main-contacto {
+        width: auto;
+        height: auto;
+        display: flex;
+
+
+    }
+
+    .titulo-contac {
+
+        display: flex;
+        color: black;
+        font-weight: bold;
+    }
+
+    .formulario {
+        display: flex;
+        font-weight: bold;
+
+    }
+
+
+    .contenedor-form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        text-align: center;
+        width: auto;
+        height: auto;
+        margin: 100px;
+    }
+
+    .espacio {
+
+        width: auto;
+        height: auto;
+    }
+
+    .mapa {
+        display: none
+    }
+
+    .boton {
+
+
+        border-radius: 3px;
+        opacity: 1;
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .img-titulo4 {
+        width: 100%;
+        height: 50%;
+    
+    }
+
+    .main-contacto {
+        width: auto;
+        height: auto;
+        margin: 1rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        gap: 1rem;
+        align-items: center;
+
+    }
+
+    .titulo-contac {
+
+        display: grid;
+        color: black;
+        font-weight: bold;
+
+
+
+    }
+
+    .formulario {
+
+        display: grid;
+        width: auto;
+        height: auto;
+
+        font-weight: bold;
+
+    }
+
+    .espacio {
+
+        width: 100px;
+        margin: 10px;
+    }
+
+
+    .contenedor-form {
+
+        margin: 10px;
+
+
+    }
+
+    .mapa {
+        display: grid;
+    }
+
+    .boton {
+
+        margin: 10px;
+        border-radius: 5px;
+
+        opacity: 1;
+    }
+}
