--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,7 @@
 .body {
   overflow-x: hidden;
   background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%);
-  width: 100%;
-  height: 915px; }
+  width: 100%; }
 
 .img-titulo2 {
   width: 100%;
@@ -43,8 +42,8 @@
   padding: 10px; }
 
 .facebook {
-  width: 70PX;
-  height: 70PX; }
+  width: 70px;
+  height: 70px; }
 
 @media screen and (min-width: 768px) {
   .img-titulo2 {
@@ -290,9 +289,10 @@ section img {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  font-size: 50px;
+  font-size: 25px;
   font-weight: bold;
-  margin: 5px; }
+  background-color: darkgoldenrod;
+  width: 100%; }
 
 .main-ventas {
   width: 100%;
@@ -319,6 +319,15 @@ section img {
   .img-titulo2 {
     width: 100%;
     height: 750px; }
+  .titulo-ventas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    background-color: darkgoldenrod;
+    width: 100%; }
   .main-ventas {
     width: 100%;
     display: flex;
