--- a/scss/secciones/_ventas.scss
+++ b/scss/secciones/_ventas.scss
@@ -15,9 +15,10 @@
 .titulo-ventas{
 
   @include flex;
-  font-size: 50px;
+  font-size: 25px;
   font-weight: bold;
-  margin: 5px;
+  background-color: darkgoldenrod;
+  width: 100%;
 }
 
 .main-ventas {
@@ -66,6 +67,14 @@
         width: $ancho;
         height: 750px;
     }
+    .titulo-ventas{
+
+        @include flex;
+        font-size: 50px;
+        font-weight: bold;
+        background-color: darkgoldenrod;
+        width: 100%;
+      }
     
     .main-ventas {
 
