--- a/scss/stile.scss
+++ b/scss/stile.scss
@@ -15,7 +15,7 @@
     overflow-x: hidden;
     background-image:$color-body;
     width: 100%;
-    height: 915px;
+   
 }
 
 .img-titulo2 {
@@ -63,8 +63,8 @@
 
 .facebook {
 
-width: 70PX;
-height: 70PX;
+width: 70px;
+height: 70px;
 
 }
 
