--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@
   .menu {
     display: flex;
     justify-content: center;
-    font-size: 25px; }
+    font-size: 17px; }
   .collapse {
     font-weight: bolder !important;
     color: aliceblue; }
@@ -474,8 +474,7 @@ section img {
     height: auto;
     font-weight: bold; }
   .espacio {
-    width: 100px;
-    margin: 10px; }
+    width: 100%; }
   .contenedor-form {
     margin: 10px; }
   .mapa {
