--- a/scss/stile.scss
+++ b/scss/stile.scss
@@ -68,6 +68,7 @@ height: 70px;
 
 }
 
+/*fotos del titutlo inicial para las diferentes pages*/
 
 @media screen and (min-width: 768px){
 
@@ -88,6 +89,9 @@ height: 70px;
         font-size: 25px;
     }
 }
+ 
+
+
 
 @media screen and (min-width: 1024px) {
 
