--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,10 @@
   font-size: 25px; }
 
 /*pie de pagina*/
+.footer {
+  width: 100%;
+  margin-top: 110px; }
+
 .titulo-footer {
   display: flex;
   justify-content: center;
@@ -281,6 +285,11 @@ section img {
   background-color: darkgoldenrod;
   padding: 5px; }
 
+.body {
+  overflow-x: hidden;
+  background-image: linear-gradient(347deg, whitesmoke 0%, #ffba41 50%, rgba(218, 131, 0, 0.983718) 100%);
+  width: 100%; }
+
 .img-titulo2 {
   width: 100%;
   height: 300px; }
@@ -305,13 +314,12 @@ section img {
   margin: 1px; }
 
 .ventas {
-  width: 500px;
-  height: auto;
+  width: 100%;
   gap: 1rem; }
 
 .photo-size {
-  width: 400px !important;
-  height: 400px;
+  width: 320px;
+  height: 320px;
   border: solid black 2px;
   margin-bottom: 1rem; }
 
